--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poll-a-lot",
-  "version": "5.9.0",
+  "version": "5.9.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -50,7 +50,7 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.5",
+    "@angular/build": "^20.3.14",
     "@angular/cli": "^21.0.5",
     "@angular/compiler-cli": "^21.0.8",
     "@angular/language-service": "21.0.8",
@@ -66,7 +66,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ts-node": "~4.1.0",
+    "ts-node": "^1.7.1",
     "typescript": "~5.9.0",
     "webpack": "5.102.1"
   }
