--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poll-a-lot",
-  "version": "5.11.2",
+  "version": "5.12.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -31,6 +31,7 @@
     "@angular/ssr": "21.1.0",
     "@schematics/angular": "20.3.1",
     "@types/emoji-flags": "1.3.1",
+    "colorthief": "^2.6.0",
     "core-js": "3.6.4",
     "emoji-flags": "1.3.0",
     "express": "^4.21.2",
@@ -54,10 +55,13 @@
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
     "@angular/language-service": "21.1.0",
+    "@types/colorthief": "^2.6.1",
     "@types/express": "4.17.17",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.8",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "22.14.1",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
