--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
       "node_modules/@types"
     ],
     "module": "es2020",
-    "baseUrl": "./",
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+  },
+  "angularCompilerOptions": {
+  //   "fullTemplateTypeCheck": true,
+  //   "strictInjectionParameters": true,
+  //   "strictTemplates": true
   }
 }
